@@ -1,3 +1,4 @@
+	* fixed NAT-PMP issue when adding the same mapping multiple times
 	* no peers from tracker when stopping is no longer an error
 	* improved web seed retry behavior
 	* fixed announce issue
